--- a/Assgn 1/Base.lproj/Main.storyboard
+++ b/Assgn 1/Base.lproj/Main.storyboard
@@ -17,10 +17,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="47" translatesAutoresizingMaskIntoConstraints="NO" id="oc9-pJ-DbA">
-                                <rect key="frame" x="55.666666666666657" y="327" width="282" height="198"/>
+                                <rect key="frame" x="13.666666666666657" y="327" width="366" height="198"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="60" translatesAutoresizingMaskIntoConstraints="NO" id="U8i-3f-BWH">
-                                        <rect key="frame" x="2.6666666666666572" y="0.0" width="276.66666666666674" height="34"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="U8i-3f-BWH">
+                                        <rect key="frame" x="2.6666666666666572" y="0.0" width="360.66666666666674" height="34"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Height" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sOw-uI-25J">
                                                 <rect key="frame" x="0.0" y="0.0" width="86.666666666666671" height="34"/>
@@ -29,7 +29,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hsj-9L-agv">
-                                                <rect key="frame" x="146.66666666666666" y="0.0" width="129.99999999999997" height="34"/>
+                                                <rect key="frame" x="111.66666666666669" y="0.0" width="130" height="34"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="34" id="Fkw-LW-dPf"/>
                                                     <constraint firstAttribute="width" constant="130" id="JWU-Lq-F7l"/>
@@ -37,10 +37,16 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                             </textField>
+                                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="hFc-GC-rnK">
+                                                <rect key="frame" x="266.66666666666669" y="0.0" width="94" height="34"/>
+                                                <connections>
+                                                    <action selector="heightStepperChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="Gh4-6E-AJT"/>
+                                                </connections>
+                                            </stepper>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="60" translatesAutoresizingMaskIntoConstraints="NO" id="Ehc-kL-Se6">
-                                        <rect key="frame" x="0.0" y="81" width="282" height="34"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="Ehc-kL-Se6">
+                                        <rect key="frame" x="0.0" y="81" width="366" height="34"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weight" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ph3-nL-OtV">
                                                 <rect key="frame" x="0.0" y="0.0" width="92" height="34"/>
@@ -49,7 +55,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bce-AB-m64">
-                                                <rect key="frame" x="152" y="0.0" width="130" height="34"/>
+                                                <rect key="frame" x="117" y="0.0" width="130" height="34"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="34" id="5Md-ja-3Ho"/>
                                                     <constraint firstAttribute="width" constant="130" id="JvH-CG-lCd"/>
@@ -57,10 +63,16 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                             </textField>
+                                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="rxp-Y9-B5W">
+                                                <rect key="frame" x="272" y="0.0" width="94" height="34"/>
+                                                <connections>
+                                                    <action selector="weightStepperChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="g8D-Se-0zs"/>
+                                                </connections>
+                                            </stepper>
                                         </subviews>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BMI: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="akv-iW-jRG">
-                                        <rect key="frame" x="108.66666666666669" y="162" width="64.666666666666686" height="36"/>
+                                        <rect key="frame" x="150.66666666666669" y="162" width="64.666666666666686" height="36"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -76,8 +88,10 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="heightStepper" destination="hFc-GC-rnK" id="5lw-0k-RtV"/>
                         <outlet property="heightTextField" destination="hsj-9L-agv" id="uL9-PI-m2P"/>
                         <outlet property="resultLabel" destination="akv-iW-jRG" id="mPI-t8-7C1"/>
+                        <outlet property="weightStepper" destination="rxp-Y9-B5W" id="c93-bx-xUu"/>
                         <outlet property="weightTextField" destination="Bce-AB-m64" id="MvT-6B-x4r"/>
                     </connections>
                 </viewController>
